Fixed the image resizing in the 1 section.
The problem was that changing the dimension of the webpage window, the image, the the webpage dimensions were too small, was exiting the window.
With the command "min-width: 0%" the problem was solved.

--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,12 @@ a {
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 100px;
-    flex:auto;
-
+    /* border: 1px solid wheat; */
 }
 
 .container-text {
     max-width: 500px;
+    /* border: 1px solid red; */
 }
 
 .h1 {
@@ -85,10 +85,11 @@ button.signup.sec-one {
 }
 
 img.placeholder {
-    object-fit: cover;
-    height: 260px;
-    width: 390px;
-    /* min-width: 0px; */
+    /* object-fit: cover; */
+    height: auto;
+    width: 100%;
+    max-width: 490px;
+    min-width: 0px;
     border-radius: 10px;
 }
 
@@ -111,11 +112,11 @@ img.placeholder {
     display: flex;
     justify-content: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .container-icons > * {
     max-width: 200px;
-    margin-bottom: 100px;
 }
 
 img.icon {
@@ -131,6 +132,7 @@ img.icon {
 .section-three {
     background-color: #E5E7EB;    
     padding: 50px 150px;
+    margin-top: 100px;
     /* display: flex; */
     /* flex-direction: column; */
     /* gap: 10px; */
